remove 100vh from wrappers to prevent weird clipping issues

--- a/src/components/styles/OmniTerminal.css
+++ b/src/components/styles/OmniTerminal.css
@@ -163,8 +163,6 @@
  	width: 100%;
  	height: 100%;
 
- 	min-height: 100vh;
-
  	background-color: rgb(82, 95, 127);
 }
 
